# regelum

./: .gitignore  AGENTS.md  README.md  STAGES.md  continuous.md  full_test_cov_to_do.md  our_goal.md  pyproject.toml  дискуссия.md
docs/: frontend.md  plan_delay_and_constructive.md
examples/: rl_policy_example.py
pipes/: __init__.py  advanced_reactive_control.py  multirate_sdf.py  nonholonomic_mpc.py  pendulum_mpc.py  pendulum_pid.py  router_fixed_point.py  van_der_pol_hybrid.py
src/regelum/: __init__.py  api.py
src/regelum/compiler/: expr_utils.py  passes.py  passes_sdf.py  pipeline.py  report.py
src/regelum/core/: contracts.py  hybrid_adapters.py  interpreter.py  runtime.py  ternary.py  types.py
src/regelum/ir/: graph.py
src/regelum/vis/: __init__.py  dashboard.py
src/rg_compiler/: __init__.py  api.py  logging_config.py
src/rg_compiler/compiler/: expr_utils.py  passes.py  passes_sdf.py  (+2 more)
tests/: audit_repro.py  repro_goal.py  test_ideal_flow.py  test_router_fixed_point.py  test_stage0_raw.py  test_stage10_continuous.py  test_stage10_hybrid_integration.py  test_stage10_vdp_pipeline.py  test_stage10_wiring.py  test_stage11_facade.py  test_stage12_autowire.py  test_stage1_variables.py  test_stage2_compiler.py  test_stage3_dsl.py  test_stage3_state_set.py  test_stage4_analysis.py  test_stage5_causality.py  test_stage5_constructive.py  test_stage5_ternary_complex.py  test_stage6_absent.py  test_stage6_init_pass.py  test_stage7_zeno.py  test_stage8_sdf.py  test_stage9_causality.py  test_stage9_contracts.py  test_stage9_sugar.py  test_vdp_control_flow.py
(+15 files in other folders)
