[project]
name = "regelum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Georgiy Malaniya", email = "pwlsd.gm@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "pygame>=2.6.1",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "repomix>=0.3.4",
]

[project.scripts]
regelum = "regelum:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
